# Beast_fighting_chess

./: 斗兽棋.pptx  斗兽棋项目文档.docx
Beast_fighting_chess/: Actions.qml  Beast_fighting_chess.js  Board.qml  CMakeLists.txt  Chess.qml  Image.qrc  Main.qml  Start.qml  Window.qml  main.cpp  main.qml
